k8s/manifests/user/network-system/static-routes/hyperion/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hyperion
  namespace: network-system
  ingressClassName: "nginx"
  annotations:
    cert-manager.io/cluster-issuer: ${CLUSTER_CERT}
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    nginx.ingress.kubernetes.io/proxy-ssl-verify: "off"
    external-dns/is-public: "false"
    hajimari.io/enable: "true"
    hajimari.io/icon: "server"
    hajimari.io/appName: "hyperion"

spec:
  tls:
    - secretName: tls.hyperion
      hosts:
        - "hyperion.${EXTERNAL_DOMAIN}"

  rules:
    - host: hyperion.${EXTERNAL_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hyperion
                port:
                  name: https
